Fixed CV error and changed to san-serif font.
Accidentally wrote "Dean's List" instead of "President's List" here, and I've been told Serif looks bad, not just dated (which I would otherwise be fine with; still thinking about this).

--- a/common.css
+++ b/common.css
@@ -44,6 +44,7 @@ nav {
 
 body {
 	background-color: aquamarine;
+	font-family: sans-serif;
 }
 #body {
 	position: absolute;
